--- a/src/scss/blocks/_extra-info.scss
+++ b/src/scss/blocks/_extra-info.scss
@@ -1,60 +1,62 @@
 .extra-info {
-  margin-bottom: 52px;
+    margin-bottom: 52px;
 }
 
 .extra-info__header {
-  display: flex;
-  align-items: center;
-  margin-bottom: 44px;
+    display: flex;
+    align-items: center;
+    margin-bottom: 44px;
+    @media (min-width: $tablet) {
+        white-space: nowrap;
+    }
 }
 
-
 .extra-info__button {
-  @include btn-reset;
-  min-width: 32px;
-  min-height: 32px;
-  border-radius: 50%;
-  border: 1px solid #E4ECFA;
-  position: relative;
-  transition: .5s;
-  &--active {
-    transform: rotate(180deg);
-  }
+    @include btn-reset;
+    min-width: 32px;
+    min-height: 32px;
+    border-radius: 50%;
+    border: 1px solid #e4ecfa;
+    position: relative;
+    transition: 0.5s;
+    &--active {
+        transform: rotate(180deg);
+    }
 }
 
 .extra-info__button-icon {
-  position: absolute;
-  content: '';
-  display: block;
-  width: 10px;
-  height: 10px;
-  transform: rotate(-135deg);
-  border-top: 1px solid #9cbaf0;
-  border-left: 1px solid #9cbaf0;
-  left: 11px;
-  top: 8px;
-  transition: .2s;
+    position: absolute;
+    content: "";
+    display: block;
+    width: 10px;
+    height: 10px;
+    transform: rotate(-135deg);
+    border-top: 1px solid #9cbaf0;
+    border-left: 1px solid #9cbaf0;
+    left: 11px;
+    top: 8px;
+    transition: 0.2s;
 }
 
 .extra-info__wrapper {
-  justify-content: center;
-  display: none;
-  gap: 30px;
-  &--open {
-    display: flex;
-    flex-wrap: wrap;
-  }
+    justify-content: center;
+    display: none;
+    gap: 30px;
+    &--open {
+        display: flex;
+        flex-wrap: wrap;
+    }
 }
 
 .extra-info__card {
-  width: 100%;
-  max-height: 246px;
-  overflow-y: hidden;
-  @media (min-width: $tablet) {
-    width: 430px;
-  }
+    width: 100%;
+    max-height: 246px;
+    overflow-y: hidden;
+    @media (min-width: $tablet) {
+        width: 430px;
+    }
 }
 
 .extra-info__card-title {
-  margin-bottom: 21px;
+    margin-bottom: 21px;
 }
