Сделал куки, сделал меню по ховеру

--- a/src/pug/layouts/_main.pug
+++ b/src/pug/layouts/_main.pug
@@ -11,6 +11,7 @@ html(lang="ru")
 
     body
         include ./../layouts/_svg.pug
+        include ./../sections/cookie/_cookie
         include ./../sections/_header.pug
 
         block content
